syntax = "proto3";

package pb;

import "google/api/annotations.proto";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "github.com/maichain/eth-indexer/service/pb/transaction.proto";

option (gogoproto.goproto_getters_all) = false;
option (gogoproto.goproto_stringer_all) = false;
option (gogoproto.stringer_all) = true;
option (gogoproto.marshaler_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.goproto_registration) = true;

message BlockQueryRequest {
  string hash = 1;
}

message BlockQueryResponse {
  string hash = 1;
  int64 number = 2;
  bytes nonce = 3;
  repeated TransactionQueryResponse transactions = 4;
}

service BlockService {
  rpc GetBlockByHash(BlockQueryRequest) returns (BlockQueryResponse) {
    option (google.api.http) = {
      get: "/v1/blocks/{hash}"
    };
  }
}
